--- a/Experiment-Analysis.ipynb
+++ b/Experiment-Analysis.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "2468b4bb",
    "metadata": {},
    "outputs": [
@@ -74,6 +74,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 100 entries, 3 to 197\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype\n",
+      "---  ------  --------------  -----\n",
+      " 0   normal  100 non-null    bool \n",
+      " 1   role    100 non-null    bool \n",
+      "dtypes: bool(2)\n",
+      "memory usage: 1000.0 bytes\n",
       "Independence check: 100 unique question IDs (no duplicates).\n",
       "Discordant pairs: b=11, c=8\n",
       "Discordant pairs (b+c): 19\n"
@@ -110,6 +119,7 @@
     "# pivot to get one row per question with role / normal columns\n",
     "pivot = df.pivot(index='id', columns='prompt_type', values='is_correct').dropna()\n",
     "pivot.columns = [c.lower() for c in pivot.columns]\n",
+    "pivot.info()\n",
     "\n",
     "# Independence \n",
     "\n",
@@ -170,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "35328910",
    "metadata": {},
    "outputs": [
@@ -212,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "71a66127",
    "metadata": {},
    "outputs": [
